# projekt-inteligencja-obliczeniowa-1

./: .gitignore  README.md  pyproject.toml  requirements.txt  source.md
models/NB/: MultinomialNB.joblib
scripts/: pt_run.sh
src/: kneighbors.py  load_data.py  preprocess.py  pt_test.py  stats.py
src/classifiers/: apriori.py  dt.py  knn.py  mlp.py  mlp_eased.py  mlp_tf.py  nb.py  neural_network.py  pca.py  pt_mlp.py
src/utils/: check_prediction.py  preprocess.py  stats.py
